fixed error where card overrides menu on small screens

--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ nav .fa-cart-shopping {
     top: 0;
     right: -200px;
     text-align: left;
-    z-index: 2;
+    z-index: 5;
     transition: 1s;
   }
   nav .fa-solid {
